<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawerId"
    tools:context=".CardViewActivity">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@android:color/white">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <ImageView-->
<!--                    android:id="@+id/menu"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_menu"/>-->

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/app_name"-->
<!--                    android:gravity="center"-->
<!--                    android:textSize="22sp"/>-->
<!--            </LinearLayout>-->


<!--        </androidx.appcompat.widget.Toolbar>-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:weightSum="4">


    <LinearLayout
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/bloodRequestId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/donation"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundpurple"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/searchBloodId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/request"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundbrown"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_rosybrown"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <!--Second Linear Layout -->
    <LinearLayout
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/allDonorId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/friend"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundblue"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_blue"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/ambulanceId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/car"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundgreen"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_green"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <!-- Third Linear Layout -->
    <LinearLayout
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/newsFeedId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/letter"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundpink"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_pink"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/fbGroupId"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/facebook"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackgroundwhite"
                    />

                <View
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_white"
                    android:padding="10dp"
                    />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/option6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </LinearLayout>


<!--    </RelativeLayout>-->

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/material_white"
        app:menu="@menu/nav_menu_layout"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/navigationId"
        >

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>